--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
                             <label for="secret">Secret Key</label>
                             <input type="password" class="form-control" id="secret" required>
                         </div>
+                        <div class="form-group">
+                            <label for="version">Salesforce version</label>
+                            <input type="number" value="48" class="form-control" id="version" required>
+                        </div>
+                        <div class="form-group" style="margin-left: 5%;">
+                            <input type="checkbox" class="form-check-input" id="salesforceEnvironment" checked>
+                            <label class="form-check-label" for="salesforceEnvironment">Are you using salesforce environment ?</label>
+                        </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                         <button type="reset" class="btn btn-primary">Reset</button>
                     </form>
@@ -66,7 +74,9 @@
                     "field" : $("#field").val(),
                     "email" : $("#email").val(),
                     "pwd" : $("#pwd").val(),
-                    "secret" : $("#secret").val()
+                    "secret" : $("#secret").val(),
+                    "version": $("#version").val(),
+                    "salesforceEnvironment": $("#salesforceEnvironment").prop("checked"),
                 };
 
                 const response = await fetch("/api/customObj", {
